--- a/less/character.less
+++ b/less/character.less
@@ -24,6 +24,8 @@
     .charlevel {
       flex: 0 0 20px;
       height: 20px;
+      overflow: hidden;
+      text-overflow: ellipsis;
       font-size: 18px;
       color: @colorTan;
       white-space: nowrap;
@@ -79,7 +81,6 @@
 
     .summary .proficiency {
       text-align: right;
-      padding-right: 5px;
     }
   }
 
